--- a/assets/css/blocks/_header.scss
+++ b/assets/css/blocks/_header.scss
@@ -13,10 +13,14 @@
 	top: 0;
 	left: 0;
 	z-index: 100;
+
+	@media #{$breakpoint-992} {
+		background-color: rgba(#000, 90%);
+	}
 }
 
 .header--fixed {
 	position: fixed;
 
-	background-color: $color-third;
+	background-color: rgba(#000, 90%);
 }
