--- a/assets/css/blocks/_nav.scss
+++ b/assets/css/blocks/_nav.scss
@@ -2,13 +2,47 @@
 ================================= */
 .nav {
 	width: 100%;
-	height: 100px;
+	height: auto;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
 
 	@media #{$breakpoint-992} {
-		display: none;
+		// display: none;
+
+		width: 100%;
+		height: 100%;
+		padding-bottom: 100px;
+		min-height: calc(100vh - 100px);
+
+		overflow: auto;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: start;
+
+		background-color: rgba(#000, 80%);
+		transform: translateX(100%);
+		transition: transform 0.3s ease-out;
+
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 100%;
+		z-index: 100;
+	}
+
+	&.show {
+		display: flex;
+
+		transform: translateX(0);
+
+		& .nav__link {
+			width: 140px;
+			margin-right: 0;
+			padding: 15px 10px;
+
+			border-bottom: 1px solid #fff;
+		}
 	}
 }
 
