--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ body {
   background-color: #fff;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 p {
   margin: 0 0 10px;
 }
@@ -526,10 +530,15 @@ h6 {
   left: 0;
   z-index: 100;
 }
+@media (max-width: 992px) {
+  .header {
+    background-color: rgba(0, 0, 0, 0.9);
+  }
+}
 
 .header--fixed {
   position: fixed;
-  background-color: #2c3039;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 /* Logo
@@ -580,15 +589,40 @@ h6 {
 ================================= */
 .nav {
   width: 100%;
-  height: 100px;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 @media (max-width: 992px) {
   .nav {
-    display: none;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 100px;
+    min-height: calc(100vh - 100px);
+    overflow: auto;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    background-color: rgba(0, 0, 0, 0.8);
+    transform: translateX(100%);
+    transition: transform 0.3s ease-out;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    z-index: 100;
   }
+}
+.nav.show {
+  display: flex;
+  transform: translateX(0);
+}
+.nav.show .nav__link {
+  width: 140px;
+  margin-right: 0;
+  padding: 15px 10px;
+  border-bottom: 1px solid #fff;
 }
 
 .nav__link {
